[package]
name = "skyr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes"] }
clap = { version = "4.1.7", features = ["derive"] }
futures = "0.3.26"
glob = "0.3.1"
skyr = { path = "../skyr" }
