[package]
name = "skyr-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skyr"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["async-attributes", "attributes"] }
clap = { version = "4.1.7", features = ["derive"] }
futures = "0.3.26"
glob = "0.3.1"
skyr = { path = "../skyr" }
