[package]
name = "skyr-file-system"
version = "0.1.0"
edition = "2021"

[lib]
name = "std_skyr_file_system"
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.66"
skyr = { path = "../skyr" }
