[package]
name = "skyr-terraform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
async-trait = "0.1.66"
prost = "0.11.8"
serde = "1.0.154"
serde_json = "1.0.94"
skyr = { path = "../skyr" }
tokio = { version = "1.26.0", features = ["full"] }
tonic = "0.8.3"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.8.4"
