[package]
name = "skyr-terraform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
async-compat = "0.2.1"
async-std = { version = "1.12.0", features = ["unstable"] }
async-tempfile = "0.2.0"
async-trait = "0.1.66"
futures-util = "0.3.27"
hyper = "0.14.25"
hyper-tls = "0.5.0"
prost = "0.11.8"
rmp-serde = "1.1.1"
serde = "1.0.154"
serde_json = "1.0.94"
skyr = { path = "../skyr" }
tokio = "1.26.0"
tonic = "0.8.3"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.8.4"
