[package]
name = "skyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.66"
bincode = "1.3.3"
futures = "0.3.26"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
