[package]
name = "skyr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.66"
rmp-serde = "1.1.1"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
skyr-derive = { path = "../skyr-derive" }
